refactor: combine getRelativePosts apis
