# src/swagger/routes/post.yaml
@@ -83,16 +83,23 @@ paths:
               schema:
                 $ref: '#/components/schemas/responseBodies/Error'
 
-  /post/request/{reqId}/experiments:
+  /post/{postType}/{postId}/relative:
     get:
-      summary: 특정 의뢰에 응답한 실험 게시물 목록 조회
+      summary: 관련 게시물 목록 조회 (최신순)
       tags:
         - Post
       parameters:
         - in: path
-          name: reqId
+          name: postType
           required: true
-          description: 의뢰 게시물 id값
+          description: 게시물 종류
+          schema:
+            type: string
+            enum: ['request', 'experiment']
+        - in: path
+          name: postId
+          required: true
+          description: 게시물 id값
           schema:
             type: number
       responses:
@@ -101,45 +108,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/responseBodies/ExperimentListByReq'
-        '400':
-          description: 잘못된 요청 오류
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/responseBodies/Error'
-        '404':
-          description: 존재하지 않는 요청 오류
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/responseBodies/Error'
-        '500':
-          description: 서버 오류
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/responseBodies/Error'
-
-  /post/experiment/{expId}/request:
-    get:
-      summary: 특정 실험 게시물이 응답한 의뢰 게시물 정보 조회
-      tags:
-        - Post
-      parameters:
-        - in: path
-          name: expId
-          required: true
-          description: 실험 게시물 id값
-          schema:
-            type: number
-      responses:
-        '200':
-          description: 조회 성공
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/responseBodies/RequestForExp'
+                $ref: '#/components/schemas/responseBodies/RelativePosts'
         '400':
           description: 잘못된 요청 오류
           content:
